# DeployNPUs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmakes/: archtest.cmake  dependency.cmake  hbbpu.cmake  hiai.cmake  openvino.cmake  rknn2.cmake
doc/: convert_rknn_model.md  run_hobot_model.md
scripts/: batch_test_hbpu.sh
source/archtest/: README.md  arch_test.hpp  main.cc
source/archtest/lmbench/: bench.h  bw_mem.c  cache.c  lib_debug.c  lib_mem.c  lib_mem.h  lib_sched.c  lib_timing.c
source/bpu/: MyBPU.hpp  README.md  function.h  function.hpp  main.cc  main.cpp
source/hiai/: README.md  main.cpp
source/include/: Helper.h  Helper.hpp  Timer.h  Timer.hpp  tabulate.hpp
source/openvino/: README.md  main.cc
source/rknn2/: main.cpp
